@@ -1,3 +1,11 @@
+w00t        2007/02/21 20:28:21 UTC	(20070221-7711)
+  Log:
+  Add a (long overdue) handler for SAQUIT to stop us 'losing' people in the hash
+
+  Changes:	Modified:
+  +11 -0	trunk/modules/protocol/inspircd11.c (File Modified) 
+
+
 jilles      2007/02/20 23:02:05 UTC	(20070220-7703)
   Log:
   chanban_add(): don't add bans starting with a colon either
